wip: create 5.36.1 release notes

--- a/src/docs/shared/release-notes/5.36.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.1/changelog.mdx
@@ -4,17 +4,29 @@ title: Webiny 5.36.1 Changelog
 description: See what's new in Webiny version 5.36.1.
 ---
 
+import themeSelector from "./assets/theme-selector.png";
+
 <GithubRelease version={"5.36.1"} />
 
 ## Page Builder
 
-### ✍️ Lexical Error Issue
+### Lexical Error Issue ([#3325](https://github.com/webiny/webiny-js/pull/3325))
 
-### ✍️ Website Settings - Theme Selector Not Working Properly 
+With the 5.36.0 release, we've addressed a couple of Lexical-related usability issues. Unfortunately, we've also introduced an issue that would cause content created with the previous version of the editor to not load properly.
 
-### ✍️ Intermittent Errors When Refreshing the Page Builder
+With this release, the Lexical content that was created prior to 5.36.0 version of Webiny should load as expected.
 
-### ✍️ Button Page Element Crashing On Empty Link URL
+### Website Settings - Fixed Theme Selector ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+
+In a multi-theme setup, at the end of the Website Settings form, the select component that would enable users to pick a theme for the current tenant wasn't working as expected. On page load, the select component would be simply empty and not showing the value that was previously selected.
+
+<Image src={themeSelector} alt="Website Settings - Fixed Theme Selector" />
+
+The select component now works as expected.
+
+### ✍️ Intermittent Errors When Refreshing the Page Builder ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+
+### ✍️ Button Page Element Crashing On Empty Link URL ([#3331](https://github.com/webiny/webiny-js/pull/3331))
 
 ## Development
 
