wip: create 5.36.1 release notes

--- a/src/docs/shared/release-notes/5.36.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.1/changelog.mdx
@@ -5,6 +5,7 @@ description: See what's new in Webiny version 5.36.1.
 ---
 
 import themeSelector from "./assets/theme-selector.png";
+import buttonLinkUrl from "./assets/button-link-url.png";
 
 <GithubRelease version={"5.36.1"} />
 
@@ -18,16 +19,26 @@ With this release, the Lexical content that was created prior to 5.36.0 version 
 
 ### Website Settings - Fixed Theme Selector ([#3331](https://github.com/webiny/webiny-js/pull/3331))
 
-In a multi-theme setup, at the end of the Website Settings form, the select component that would enable users to pick a theme for the current tenant wasn't working as expected. On page load, the select component would be simply empty and not showing the value that was previously selected.
+In a multi-theme setup, at the end of the Website Settings form, the select component that would enable users to pick the theme for the current tenant wasn't working as expected. On page load, the select component would be simply empty and not showing the value that was previously selected.
 
 <Image src={themeSelector} alt="Website Settings - Fixed Theme Selector" />
 
-The select component now works as expected.
+As seen in the screenshot, the select component now correctly shows the currently selected theme.
 
-### ✍️ Intermittent Errors When Refreshing the Page Builder ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+### Intermittent Errors When Refreshing the Page Builder ([#3331](https://github.com/webiny/webiny-js/pull/3331))
 
-### ✍️ Button Page Element Crashing On Empty Link URL ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+Intermittently, when refreshing the Page Builder's page editor, users might experience the editor crashing. This issue has been addressed with this release.  
+
+### Button Page Element Crashing On Empty Link URL ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+
+When creating a button page element, in some cases, if the user would leave the link URL field empty, the editor would crash. This issue has been addressed with this release.
+
+<Image src={buttonLinkUrl} alt="Button Page Element Crashing On Empty Link URL" />
 
 ## Development
 
-### ✍️ `webiny info` Command Now Works As Expected ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+### `webiny info` Command Now Works As Expected ([#3331](https://github.com/webiny/webiny-js/pull/3331))
+
+Prior to this release, the [`webiny info`](/docs/core-development-concepts/basics/webiny-cli#common-commands) command would not work if an environment wasn't passed (in which case the command should internally retrieve a list of all environments). 
+
+This issue has now been addressed.
