docs: add 5.36.1 file manager and aco changes

--- a/src/docs/shared/release-notes/5.36.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.1/changelog.mdx
@@ -35,6 +35,30 @@ When creating a button page element, in some cases, if the user would leave the 
 
 <Image src={buttonLinkUrl} alt="Button Page Element Crashing On Empty Link URL" />
 
+### Folder Creation Issue ([#3328](https://github.com/webiny/webiny-js/pull/3328))
+
+The 5.36.0 version introduced a bug that affected the folder creation process when using the "Create folder" button in the top right corner. After completing the folder creation process, the folder was not saved with the correct `parentId`, and not showing in the folder tree.
+
+With this bug fix, folders will now be properly saved with the appropriate `parentId`.
+
+### Folder Tree Optimization and Performance Improvements ([#3332](https://github.com/webiny/webiny-js/pull/3332))
+
+We experienced some performance issues when creating 8 or more nested folders: this has been solved and the tested creating more than 50 nested folders.
+
+## File Manager
+
+### Migration Failure in Locale without File Entries ([#3333](https://github.com/webiny/webiny-js/pull/3333))
+
+With 5.36.0 version we introduced the [Advanced Content Organisation for File Manager](https://www.webiny.com/docs/release-notes/5.36.0/changelog#introducing-advanced-content-organization-for-file-manager-3312): in order to work a data migration was needed and executed via the [Data Migration Lambda Function](https://www.webiny.com/docs/release-notes/5.35.0/changelog#data-migration-lambda-function-3079-3150). When dealing with a locale that lacked file entries, the migration process would fail.
+
+We have resolved this migration bug. The fix ensures that in cases where a locale does not have any file entries, the migration process no longer encounters errors and proceeds smoothly.
+
+<Alert type="warning">
+
+The fix specifically targets instances where the migration failed due to this particular scenario. In case you experienced a migration failure, this has been marked as failed and will be re-run during Webiny project deploy.
+
+</Alert>
+
 ## Development
 
 ### `webiny info` Command Now Works As Expected ([#3331](https://github.com/webiny/webiny-js/pull/3331))
