docs: improve Folder Tree title

--- a/src/docs/shared/release-notes/5.36.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.1/changelog.mdx
@@ -41,7 +41,7 @@ The 5.36.0 version introduced a bug that affected the folder creation process wh
 
 With this bug fix, folders will now be properly saved with the appropriate `parentId`.
 
-### Folder Tree Optimization and Performance Improvements ([#3332](https://github.com/webiny/webiny-js/pull/3332))
+### Folder Tree Performance Improvements ([#3332](https://github.com/webiny/webiny-js/pull/3332))
 
 We experienced some performance issues when creating 8 or more nested folders: this has been solved and the tested creating more than 50 nested folders.
 
