fix: update title

--- a/src/docs/shared/release-notes/5.36.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.1/changelog.mdx
@@ -11,11 +11,11 @@ import buttonLinkUrl from "./assets/button-link-url.png";
 
 ## Page Builder
 
-### Lexical Error Issue ([#3325](https://github.com/webiny/webiny-js/pull/3325))
+### Content Not Being Displayed with the new Lexical Editor ([#3325](https://github.com/webiny/webiny-js/pull/3325))
 
-With the 5.36.0 release, we've addressed a couple of Lexical-related usability issues. Unfortunately, we've also introduced an issue that would cause content created with the previous version of the editor to not load properly.
+With the 5.36.0 release, we've addressed a couple of Lexical-related usability issues. Unfortunately, we've also introduced an issue that would cause content created with the previous version of the editor to not get displayed.
 
-With this release, the Lexical content that was created prior to 5.36.0 version of Webiny should load as expected.
+With this release, the Lexical content that was created prior to 5.36.0 version of Webiny should displayed as expected.
 
 ### Website Settings - Fixed Theme Selector ([#3331](https://github.com/webiny/webiny-js/pull/3331))
 
