docs: updated the video for various guides

--- a/src/docs/5.35.x/user-guides/page-builder/essentials/page-revisions.mdx
+++ b/src/docs/5.35.x/user-guides/page-builder/essentials/page-revisions.mdx
@@ -17,10 +17,10 @@ In Webiny, each modification made in a page (in the Page Builder) that is publis
 
 We will do this in 4 steps:
 
-- Step 1: Create a new page.
-- Step 2: Make multiple revisions of a page.
-- Step 3: Publish a specific revision of a page.
-- Step 4: Create a new page version from a previous revision.
+- Step 1: Create a new page
+- Step 2: Make multiple revisions of a page
+- Step 3: Publish a specific revision of a page
+- Step 4: Create a new page version from a previous revision
 
 <Video src={pageRevisions} controls={true} />
 
