--- a/src/docs/5.35.x/user-guides/page-builder/essentials/website-settings.mdx
+++ b/src/docs/5.35.x/user-guides/page-builder/essentials/website-settings.mdx
@@ -79,17 +79,30 @@ The other input field(s) in the **Social Media** section have the following use 
 
 In this step, we will add an script tag in the header and footer of the website.
 
+### Header tags
 1. Under the **HTML Tags** section, in the **Header tags** text-area, type the following code:
 
-**<script>
-//Add your header script here
-</script>**
+```
+<script>
+  // Add your header scripts here
+</script>
+```
+**Note:** HTML tags and scripts that are added in **Header tags** will be get added before
+the closing `</head>` tag in HTML. 
+In Header tags, the supported tags are `<script>` and `<meta>`.
 
+### Footer tags
 2. Under the **HTML Tags** section, in the **Footer tags** text-area, type the following code:
 
-**<script>
-//Add your header script here
-</script>**
+```
+<script>
+  // Add your footer scripts here
+</script>
+```
+
+**Note:** HTML tags and scripts that are added in **Footer tags** will be get added before
+the closing `</body>` tag in HTML. 
+In Footer tags, the supported tag is `<script>`.
 
 3. Click **SAVE**.
 
