docs: fix documentation

--- a/src/docs/shared/release-notes/5.35.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.3/changelog.mdx
@@ -6,7 +6,7 @@ description: See what's new in Webiny version 5.35.3.
 
 ## Migration
 
-### Failure in Case of Locale without File or Page Entries ([e4092ac](https://github.com/webiny/webiny-js/commit/e4092ac5301ce6c3663c88324d5929a4bdc2a8e9))
+### Failure in Case of Locale without File or Page Entries (DynamoDB only setup) ([e4092ac](https://github.com/webiny/webiny-js/commit/e4092ac5301ce6c3663c88324d5929a4bdc2a8e9))
 
 With [5.35.0 version](https://www.webiny.com/docs/release-notes/5.35.0/changelog) we introduced several features that needed data migration: this is executed via the [Data Migration Lambda Function](https://www.webiny.com/docs/release-notes/5.35.0/changelog#data-migration-lambda-function-3079-3150). When dealing with a locale that lacked file or page entries, the migration process would fail.
 
