wip: create release notes

--- a/src/docs/shared/release-notes/5.36.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.2/changelog.mdx
@@ -10,11 +10,31 @@ import aboutCommand from "./assets/aboutCommand.png";
 
 ## Page Builder
 
-### Improved
+### Multiple Fixes ([#3349](https://github.com/webiny/webiny-js/pull/3349))
 
-With the 5.36.0 release, we've addressed a couple of Lexical-related usability issues. Unfortunately, we've also introduced an issue that would cause content created with the previous version of the editor to not get displayed.
+#### Enabled `target` Property On the `PbEditorPageElementPlugin` Plugin
 
-With this release, the Lexical content that was created prior to 5.36.0 version of Webiny should displayed as expected.
+The `target` property on the `PbEditorPageElementPlugin` plugin enables user to define into which existing elements the element that's being dragged can be dropped. Prior to this release, this didn't work, because the property essentially wasn't taken into consideration in the internal code.
+
+From now on, users can now use the `target` property on the `PbEditorPageElementPlugin` plugin to explicitly list elements into which the dragged element can be dropped.
+
+#### Introduced the `canReceiveChildren` Property On the `PbEditorPageElementPlugin` Plugin
+
+Prior to this release, if a user wanted to mark a page element as an element that can receive additional children elements (for example via drag and drop), they would need to define the `onReceived` callback via the `PbEditorPageElementPlugin` plugin. 
+
+Since this showed to be a common use-case, we decided to introduce a new property called `canReceiveChildren` on the `PbEditorPageElementPlugin` plugin, which enables users to mark an element as an element that can receive additional children elements, without the need to define the `onReceived` callback.
+
+#### `target` Is Now Also Considered When Adding Elements By Clicking In the Left Sidebar
+
+Prior to this release, when adding an element onto a page via the **Click to Add** feature (vs. just dragging and dropping), the `target` property defined on the `PbEditorPageElementPlugin` plugin would not be taken into consideration.
+
+This has now been taken addressed. No matter if the user drags and drops the page element onto an existing element, or adds it via the mentioned **Click to Add** feature, the `target` property will be considered. In other words, the page element won't get added into the existing element, no matter which approach was used.
+
+## Documentation
+
+### New "Page Element With Child Elements" Example 
+
+On the back of the improvements listed in the [Page Builder](http://localhost:8000/docs/release-notes/5.36.2/changelog#page-builder) section above, we've created the [Page Element With Child Elements](https://github.com/webiny/webiny-examples/tree/master/page-builder/element-with-child-elements) example, which demonstrates how to create a page element that can receive additional child elements. Be sure to check out the example, as it also contains a couple of bonuses.
 
 ## Development
 
