wip: create release notes

--- a/src/docs/shared/release-notes/5.36.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.2/changelog.mdx
@@ -5,6 +5,7 @@ description: See what's new in Webiny version 5.36.2.
 ---
 
 import aboutCommand from "./assets/aboutCommand.png";
+import clickToAdd from "./assets/clickToAdd.png";
 
 <GithubRelease version={"5.36.2"} />
 
@@ -14,21 +15,23 @@ import aboutCommand from "./assets/aboutCommand.png";
 
 #### Enabled `target` Property On the `PbEditorPageElementPlugin` Plugin
 
-The `target` property on the `PbEditorPageElementPlugin` plugin enables user to define into which existing elements the element that's being dragged can be dropped. Prior to this release, this didn't work, because the property essentially wasn't taken into consideration in the internal code.
+The [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507) property on the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L500-L540) plugin enables users to define into which existing elements the element that's being dragged can be dropped. Prior to this release, this didn't work, because the property essentially wasn't taken into consideration in the internal code.
 
-From now on, users can now use the `target` property on the `PbEditorPageElementPlugin` plugin to explicitly list elements into which the dragged element can be dropped.
+From now on, users can now use the [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507) property on the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L500-L540) plugin to explicitly list elements into which the dragged element can be dropped.
 
 #### Introduced the `canReceiveChildren` Property On the `PbEditorPageElementPlugin` Plugin
 
-Prior to this release, if a user wanted to mark a page element as an element that can receive additional children elements (for example via drag and drop), they would need to define the `onReceived` callback via the `PbEditorPageElementPlugin` plugin. 
+Prior to this release, if a user wanted to mark a page element as an element that can receive additional children elements (for example via drag and drop), they would need to define the [`onReceived`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L519) callback via the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L500-L540) plugin. 
 
-Since this showed to be a common use-case, we decided to introduce a new property called `canReceiveChildren` on the `PbEditorPageElementPlugin` plugin, which enables users to mark an element as an element that can receive additional children elements, without the need to define the `onReceived` callback.
+Since this showed to be a common use-case, we decided to introduce a new property called [`canReceiveChildren`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L517) on the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L500-L540) plugin, which enables users to mark an element as an element that can receive additional children elements, without the need to define the [`onReceived`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L519) callback.
 
 #### `target` Is Now Also Considered When Adding Elements By Clicking In the Left Sidebar
 
-Prior to this release, when adding an element onto a page via the **Click to Add** feature (vs. just dragging and dropping), the `target` property defined on the `PbEditorPageElementPlugin` plugin would not be taken into consideration.
+Prior to this release, when adding an element onto a page via the **Click to Add** feature (vs. just dragging and dropping), the [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507)  property defined on the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L500-L540) plugin would not be taken into consideration.
 
-This has now been taken addressed. No matter if the user drags and drops the page element onto an existing element, or adds it via the mentioned **Click to Add** feature, the `target` property will be considered. In other words, the page element won't get added into the existing element, no matter which approach was used.
+<Image src={clickToAdd} alt={"The Click to Add button in the left sidebar."} />
+
+This has now been taken addressed. No matter if the user drags and drops the page element onto an existing element, or adds it via the mentioned **Click to Add** feature, the [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507) property will be considered. In other words, the page element won't get added into the existing element, no matter which approach was used.
 
 ## Documentation
 
