docs: add File Manager migration chapter

--- a/src/docs/shared/release-notes/5.36.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.2/changelog.mdx
@@ -33,6 +33,20 @@ Prior to this release, when adding an element onto a page via the **Click to Add
 
 This has now been taken addressed. No matter if the user drags and drops the page element onto an existing element, or adds it via the mentioned **Click to Add** feature, the [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507) property will be considered. In other words, the page element won't get added into the existing element, no matter which approach was used.
 
+## File Manager
+
+### Migration Failure in Locale Without File Entries (DynamoDB + Elasticsearch Setup) ([#3337](https://github.com/webiny/webiny-js/pull/3337))
+
+With 5.36.0 version we introduced the [Advanced Content Organisation for File Manager](https://www.webiny.com/docs/release-notes/5.36.0/changelog#introducing-advanced-content-organization-for-file-manager-3312): in order to work a data migration was needed and executed via the [Data Migration Lambda Function](https://www.webiny.com/docs/release-notes/5.35.0/changelog#data-migration-lambda-function-3079-3150). When dealing with a locale that lacked file entries, the migration process would fail.
+
+We have resolved this migration bug. The fix ensures that in cases where a locale does not have any file entries (and the consequent empty Elasticsearch index), the migration process no longer encounters errors and proceeds smoothly.
+
+<Alert type="warning">
+
+The fix specifically targets instances where the migration failed due to this particular scenario. In case you experienced a migration failure, this has been marked as failed and will be re-run during Webiny project deploy.
+
+</Alert>
+
 ## Documentation
 
 ### New "Page Element With Child Elements" Example 
