--- a/src/docs/shared/release-notes/5.36.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.2/changelog.mdx
@@ -55,6 +55,26 @@ On the back of the improvements listed in the [Page Builder](http://localhost:80
 
 ## Development
 
+### Fully Destroy Your Project With the Improved `webiny destroy` Command ([#3351](https://github.com/webiny/webiny-js/pull/3351))
+
+Prior to this release, in order to fully destroy a deployed Webiny project, users would need to destroy all four project applications (**Website**, **Admin**, **API**, and **Core**), by sequentially running four separate [`webiny destroy`](/docs/infrastructure/basics/destroy-cloud-infrastructure#the-destroy-command) commands.
+
+<br/><br/>
+
+And although this was made a bit easier with the ability to [specify multiple applications](/docs/release-notes/5.34.1/changelog#webiny-cli-run-commands-against-multiple-apps-2974) in a single command execution, it was still not ideal because users would need to remember to destroy all four applications, in the correct order.
+
+<br/><br/>
+
+So, with this release, users can now run the [`webiny destroy`](/docs/{version}/infrastructure/basics/destroy-cloud-infrastructure) command without specifying the project application. This will destroy all four applications in the correct order, and in a single command execution. In other words, the command will fully destroy your Webiny project, deployed into the specified environment.
+
+For example:
+
+```bash
+yarn webiny destroy --env dev --confirm-destroy-env dev
+```
+
+Note that, upon doing this, the command will ask for a confirmation of the environment you wish to destroy, via the `--confirm-destroy-env` flag.
+
 ### The `webiny about` Command ([#3351](https://github.com/webiny/webiny-js/pull/3351))
 
 With this release, we're introducing the `webiny about` command, which displays a plethora of information about the Webiny project you're currently working on.
