fix: add text alignment options item

--- a/src/docs/shared/release-notes/5.36.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.36.2/changelog.mdx
@@ -33,6 +33,15 @@ Prior to this release, when adding an element onto a page via the **Click to Add
 
 This has now been taken addressed. No matter if the user drags and drops the page element onto an existing element, or adds it via the mentioned **Click to Add** feature, the [`target`](https://github.com/webiny/webiny-js/blob/dev/packages/app-page-builder/src/types.ts#L507) property will be considered. In other words, the page element won't get added into the existing element, no matter which approach was used.
 
+#### Paragraph and Heading Page Elements - New Text Align Options ([#3304](https://github.com/webiny/webiny-js/pull/3304))
+
+In the page editor, users are now able to perform the following text alignment-related actions when using the Paragraph and Heading page elements:
+
+- alignment actions: align left, align right, align center, and justify center
+- indent actions: indent and outdent text
+
+Note that, previously, these actions were performed via the right side menu, which has now been removed.
+
 ## File Manager
 
 ### Migration Failure in Locale Without File Entries (DynamoDB + Elasticsearch Setup) ([#3337](https://github.com/webiny/webiny-js/pull/3337))
