fix: add missing `pulumiResourceNamePrefix`

--- a/src/docs/5.29.x/enterprise/multi-tenancy.mdx
+++ b/src/docs/5.29.x/enterprise/multi-tenancy.mdx
@@ -75,6 +75,7 @@ To configure the `website` app with your custom domain(s), navigate to `apps/web
 import { createWebsiteApp } from "@webiny/serverless-cms-aws";
 
 export default createWebsiteApp({
+  pulumiResourceNamePrefix: "wby-",
   domains() {
     return {
       domains: ["my.domain.com"],
