wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -8,6 +8,46 @@ description: See what's new in Webiny version 5.37.0.
 
 ## Page Builder
 
+### ✍️ Carousel Page Element ([#3276](https://github.com/webiny/webiny-js/pull/3276))
+
+✍️
+
+### ✍️ Tabs Page Element ([#3184](https://github.com/webiny/webiny-js/pull/3184))
+
+✍️
+
+### ✍️ Accordion Page Element ([#3175](https://github.com/webiny/webiny-js/pull/3175))
+
+✍️
+
+### ✍️ Cell Mirroring ([#3145](https://github.com/webiny/webiny-js/pull/3145))
+
+✍️
+
+### ✍️ Cursor Positioning ([#3146](https://github.com/webiny/webiny-js/pull/3146))
+
+✍️
+
+## Form Builder
+
+### ✍️ Date and Time Field ([#3209](https://github.com/webiny/webiny-js/pull/3209))
+
+✍️
+
+### ✍️ Google Analytics Trigger ([#3125](https://github.com/webiny/webiny-js/pull/3125))
+
+✍️
+
+### ✍️ Google Ads Data ([#3124](https://github.com/webiny/webiny-js/pull/3124))
+
+✍️
+
+### ✍️ Deprecating Legacy Page Rendering Engine
+
+✍️
+
+
+
 ## Security
 
 ### ✍️ Introducing Advanced Access Control Layer (AACL) ([#2576](https://github.com/webiny/webiny-js/pull/2576))
