wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -4,21 +4,38 @@ title: Webiny 5.37.0 Changelog
 description: See what's new in Webiny version 5.37.0.
 ---
 
+import pageElementAccordion from "./assets/page-element-accordion.png";
+import pageElementTab from "./assets/page-element-tab.png";
+import pageElementCarousel from "./assets/page-element-carousel.png";
+import aaclCustomPermissions from "./assets/aacl-custom-access.png";
+
 <GithubRelease version={"5.37.0"} />
 
 ## Page Builder
 
-### ✍️ Carousel Page Element ([#3276](https://github.com/webiny/webiny-js/pull/3276))
+### Carousel Page Element ([#3276](https://github.com/webiny/webiny-js/pull/3276))
 
-✍️
+With this release, we've introduced the new Carousel page element. It allows you to create a carousel of images, videos, or any other content you want to display in a carousel. 
 
-### ✍️ Tabs Page Element ([#3184](https://github.com/webiny/webiny-js/pull/3184))
+To add a carousel to your page, simply drag and drop the Carousel element from the left-side menu to the desired location on your page. 
 
-✍️
+<Image src={pageElementCarousel} title={"Carousel Page Element"} />
 
-### ✍️ Accordion Page Element ([#3175](https://github.com/webiny/webiny-js/pull/3175))
+### Tabs Page Element ([#3184](https://github.com/webiny/webiny-js/pull/3184))
 
-✍️
+With this release, we've introduced the new Tabs page element. It allows you to create a tabbed content section on your page.
+
+To add tabs to your page, simply drag and drop the Tabs element from the left-side menu to the desired location on your page.
+
+<Image src={pageElementTab} title={"Tabs Page Element"} />
+
+### Accordion Page Element ([#3175](https://github.com/webiny/webiny-js/pull/3175))
+
+With this release, we've introduced the new Accordion page element. As the name suggests, it allows you to create an accordion section on your page.
+
+To add an accordion to your page, simply drag and drop the Accordion element from the left-side menu to the desired location on your page.
+
+<Image src={pageElementAccordion} title={"Accordion Page Element"} />
 
 ### ✍️ Cell Mirroring ([#3145](https://github.com/webiny/webiny-js/pull/3145))
 
@@ -46,10 +63,21 @@ description: See what's new in Webiny version 5.37.0.
 
 ✍️
 
-
-
 ## Security
 
 ### ✍️ Introducing Advanced Access Control Layer (AACL) ([#2576](https://github.com/webiny/webiny-js/pull/2576))
 
-✍️
+The Advanced Access Control Layer (AACL) is the next step in the evolution of Webiny's existing security layer, which is now divided into three tiers. The higher the tier, the more features are available.
+
+All Webiny project start with the **open-source tier**. The tier is free to use, but, from now on, will be limited when it comes to defining fine-grained permissions, allowing only the No Access and Full Access to be selected when defining permissions for individual Webiny apps.
+
+<Image src={aaclCustomPermissions} title={"Selecting Custom Access on Open Source Tier"} />
+
+The Business and Enterprise tiers are paid tiers, which you can upgrade to at any time.  
+
+
+1. OSS
+2. Business
+3. Enterprise
+
+### Roles
