--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -8,6 +8,9 @@ import pageElementAccordion from "./assets/page-element-accordion.png";
 import pageElementTab from "./assets/page-element-tab.png";
 import pageElementCarousel from "./assets/page-element-carousel.png";
 import aaclCustomPermissions from "./assets/aacl-custom-access.png";
+import aaclCustomAccess from "./assets/aacl-custom-access.png";
+import aaclTeams from "./assets/aacl-teams.png";
+import aaclRolesRename from "./assets/aacl-roles-rename.png";
 
 <GithubRelease version={"5.37.0"} />
 
@@ -15,9 +18,9 @@ import aaclCustomPermissions from "./assets/aacl-custom-access.png";
 
 ### Carousel Page Element ([#3276](https://github.com/webiny/webiny-js/pull/3276))
 
-With this release, we've introduced the new Carousel page element. It allows you to create a carousel of images, videos, or any other content you want to display in a carousel. 
+With this release, we've introduced the new Carousel page element. It allows you to create a carousel of images, videos, or any other content you want to display in a carousel.
 
-To add a carousel to your page, simply drag and drop the Carousel element from the left-side menu to the desired location on your page. 
+To add a carousel to your page, simply drag and drop the Carousel element from the left-side menu to the desired location on your page.
 
 <Image src={pageElementCarousel} title={"Carousel Page Element"} />
 
@@ -65,19 +68,49 @@ To add an accordion to your page, simply drag and drop the Accordion element fro
 
 ## Security
 
-### ✍️ Introducing Advanced Access Control Layer (AACL) ([#2576](https://github.com/webiny/webiny-js/pull/2576))
+### Introducing Advanced Access Control Layer (AACL) ([#2576](https://github.com/webiny/webiny-js/pull/2576))
 
 The Advanced Access Control Layer (AACL) is the next step in the evolution of Webiny's existing security layer, which is now divided into three tiers. The higher the tier, the more features are available.
 
-All Webiny project start with the **open-source tier**. The tier is free to use, but, from now on, will be limited when it comes to defining fine-grained permissions, allowing only the No Access and Full Access to be selected when defining permissions for individual Webiny apps.
+All Webiny project start with the **Open Source** tier. The tier is free to use, but, from now on, will be limited when it comes to defining fine-grained permissions, allowing only the **No Access** and **Full Access** to be selected when defining permissions for individual Webiny apps.
+
+Trying to select **Custom Access** will result in an alert message being shown, informing the user that the feature is only available with the Advanced Access Control Layer (AACL), which is available on the **Business** and **Enterprise** tiers.
 
 <Image src={aaclCustomPermissions} title={"Selecting Custom Access on Open Source Tier"} />
 
-The Business and Enterprise tiers are paid tiers, which you can upgrade to at any time.  
+To upgrade to **Business** tier, users [link their project](/docs/wcp/link-a-project) with [Webiny Control Panel (WCP)](/docs/wcp/overview), from where they can activate the Advanced Access Control Layer (AACL) for their project. By doing this, users will be able to define fine-grained permissions for individual Webiny apps.
+
+<Image src={aaclCustomAccess} title={"Selecting Custom Access with Advanced Access Control Layer (AACL) Enabled"} />
+
+Finally, for the most advanced use cases, users can upgrade to the **Enterprise** tier. On top of the features available with the first two tiers, the **Enterprise tier** introduces the brand new **Teams** feature, enabling users to group users into teams and easily have them linked with one or more roles. 
+
+<Image src={aaclTeams} title={"The Brand New Teams Feature"} />
+
+This feature is especially useful for larger organizations, where it's common to have multiple teams working on different projects. Also, it's a great way to simplify the process of managing permissions for multiple users, as you can simply assign a role to a team, instead of assigning it to each individual user.
+
+For more information on the Advanced Access Control Layer (AACL) and the new Teams feature, please refer to our new [Advanced Access Control Layer (AACL) and Teams](/docs/enterprise/aacl-teams) section of our documentation. 
+
+<br/>
+<br/>
+
+<Alert type={"info"}>
+
+  For more information on our enterprise offering, please visit our
+  [Enterprise](https://www.webiny.com/enterprise) page. Alternatively, you can also book a meeting
+  [here](https://www.webiny.com/forms/enterprise-requirements).
+
+</Alert>
+
+#### A Note On Backwards Compatibility
+
+✍️ 
 
 
-1. OSS
-2. Business
-3. Enterprise
+### Renaming Security Groups to Security Roles
 
-### Roles
+With this release, we've renamed **Groups** to **Roles**. Essentially, this change was made in order for Webiny to be more aligned with industry standards. 
+
+Note that this change is purely cosmetic and does not affect the functionality of the feature in any way. On levels such as the application code or Webiny's GraphQL API schema, the feature is still referred to as **Groups** and no breaking changes were introduced.
+
+<Image src={aaclRolesRename} title={"Renaming Security Groups to Security Roles"} />
+
