wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -18,7 +18,7 @@ import aaclRolesRename from "./assets/aacl-roles-rename.png";
 
 ### Carousel Page Element ([#3276](https://github.com/webiny/webiny-js/pull/3276))
 
-With this release, we've introduced the new Carousel page element. It allows you to create a carousel of images, videos, or any other content you want to display in a carousel.
+With this release, we've introduced the new **Carousel** page element, which allows users to create a carousel of images, videos, or any other content you want to display in a carousel.
 
 To add a carousel to your page, simply drag and drop the Carousel element from the left-side menu to the desired location on your page.
 
@@ -26,7 +26,7 @@ To add a carousel to your page, simply drag and drop the Carousel element from t
 
 ### Tabs Page Element ([#3184](https://github.com/webiny/webiny-js/pull/3184))
 
-With this release, we've introduced the new Tabs page element. It allows you to create a tabbed content section on your page.
+With this release, we've introduced the new **Tabs** page element, which allows users to create a tabbed content section on your page.
 
 To add tabs to your page, simply drag and drop the Tabs element from the left-side menu to the desired location on your page.
 
@@ -34,7 +34,7 @@ To add tabs to your page, simply drag and drop the Tabs element from the left-si
 
 ### Accordion Page Element ([#3175](https://github.com/webiny/webiny-js/pull/3175))
 
-With this release, we've introduced the new Accordion page element. As the name suggests, it allows you to create an accordion section on your page.
+With this release, we've introduced the new **Accordion** page element. As the name suggests, it allows users to create an accordion section on your page.
 
 To add an accordion to your page, simply drag and drop the Accordion element from the left-side menu to the desired location on your page.
 
@@ -88,22 +88,13 @@ Finally, for the most advanced use cases, users can upgrade to the **Enterprise*
 
 This feature is especially useful for larger organizations, where it's common to have multiple teams working on different projects. Also, it's a great way to simplify the process of managing permissions for multiple users, as you can simply assign a role to a team, instead of assigning it to each individual user.
 
-For more information on the Advanced Access Control Layer (AACL) and the new Teams feature, please refer to our new [Advanced Access Control Layer (AACL) and Teams](/docs/enterprise/aacl-teams) section of our documentation. 
-
-<br/>
-<br/>
-
-<Alert type={"info"}>
-
-  For more information on our enterprise offering, please visit our
-  [Enterprise](https://www.webiny.com/enterprise) page. Alternatively, you can also book a meeting
-  [here](https://www.webiny.com/forms/enterprise-requirements).
-
-</Alert>
-
 #### A Note On Backwards Compatibility
 
-✍️ 
+The Advanced Access Control Layer (AACL) and the three tiers outlined above are a new concept introduced with this release. As such, it's important to note existing projects will not be affected by this change in any way.
+
+More specifically, Webiny instances that were deployed prior to this release will still be able to rely on the mentioned **Custom Access** option upon defining permissions for individual Webiny apps, without having to upgrade to Business tier.
+
+On the other side, unless the Business or Enterprise tier has been enabled, all newly deployed Webiny instances will automatically start with the **Open Source** tier. This means the **Custom Access** option will not be available upon defining permissions for individual Webiny apps. To enable this feature, users will have to upgrade to the Business or Enterprise tier. 
 
 
 ### Renaming Security Groups to Security Roles
