feat: add the page into the menu under Headless CMS

--- a/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 ## Overview
 
-Webiny uses Lexical editor https://lexical.dev/ as a go to Rich Text Editor, with some additional plugins. To speed up the rendering of data for developers, we created this component.
+Webiny uses Lexical editor [lexical.dev](https://lexical.dev) as a go to Rich Text Editor, with some additional plugins. To speed up the rendering of data for developers, we created this component.
 
 ## Install
 
@@ -77,7 +77,7 @@ You can add custom lexical nodes for rendering your content:
 
 ```tsx
 
-class MyCustomNode extends LexicalNode {
+class MyCustomNode extends SomeOtherNode {
     ...
 }
 
@@ -89,7 +89,7 @@ class MyCustomNode extends LexicalNode {
 
 You can override Webiny default typography theme that is used by lexical editor by providing your custom typography object.
 
-Please [ read our docs ](https://www.webiny.com/docs/page-builder/theming/theme-object) and check our [theme object on GitHub](hhttps://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/theme.ts) before add you custom theme.
+Please [ read our docs ](https://www.webiny.com/docs/page-builder/theming/theme-object) before add you custom theme.
 ```tsx
 
 const myTheme = {
