--- a/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
 
-  - how to render rich text Lexical Editor content from Headless CMS in React
+  - How to render rich text Lexical Editor content from Headless CMS in React
 
 </Alert>
 
