feat: add hcms title and depricated rich text editor subtitle

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -62,8 +62,12 @@ To add an accordion to your page, simply drag and drop the Accordion element fro
 
 ✍️
 
-### ✍️ Deprecating Legacy Page Rendering Engine
+## Headless CMS
 
+### ✍️ Deprecating Legacy Rich Text Editor
+✍️
+
+### ✍️ Deprecating Legacy Page Rendering Engine
 ✍️
 
 ## Security
